--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"vite\" \"nodemon server.js\"",
-    "build": "npm install && npm run build",
+    "build": "vite build && node server.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "node server.js"
